Add recieving props dinamically

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <body>
     <div id='app'>
       <h2>{{title}}</h2>
-      <my-message></my-message>
+      <my-task-list></my-task-list>
     </div>
   </body>
   <script type="text/javascript" src="./bundle.js"></script>
