--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
+<!DOCTYPE html>
 <html>
   <head>
     <title>Hello, World.</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <div id='app'>
